[package]
name = "octo-carnival"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
doryen-rs="1.3.0"
uni-app = "0.3.*"
itertools = "*"
regex="*"
unicode-segmentation = "1.6.0"

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2.83"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/main.rs"
